0027226: Meshing algorithm fails if edge curves has small defects (bends, loops...)

Take into account tolerance of edge vertices in order to reduce density of discretization points.