src/BRepMesh/BRepMesh_CurveTessellator.cxx
@@ -230,9 +230,9 @@ Standard_Boolean BRepMesh_CurveTessellator::Value (
   thePoint     = myDiscretTool.Value     (theIndex);
   theParameter = myDiscretTool.Parameter (theIndex);
 
-  /*if (!isInToleranceOfVertex(thePoint, myFirstVertex) &&
+  if (!isInToleranceOfVertex(thePoint, myFirstVertex) &&
       !isInToleranceOfVertex(thePoint, myLastVertex))
-  {*/
+  {
     if (!myCurve.IsCurveOnSurface())
     {
       return Standard_True;
@@ -268,9 +268,9 @@ Standard_Boolean BRepMesh_CurveTessellator::Value (
     aSurface->D0(aUV.X(), aUV.Y(), aPntOnSurf);
 
     return (thePoint.SquareDistance(aPntOnSurf) < myEdgeSqTol);
-  /*}
+  }
 
-  return Standard_False;*/
+  return Standard_False;
 }
 
 //=======================================================================
